--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -1,6 +1,8 @@
 libs.absolutelayout.classpath=\
     ${base}/absolutelayout/AbsoluteLayout.jar
 libs.absolutelayout.displayName=Absolute Layout
+libs.ConnectorJ.classpath=\
+    ${base}/ConnectorJ/mysql-connector-j-8.0.31.jar
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
